修改用户密码在脚本中的存储方式

--- a/实验 7/ansible/samba/tasks/main.yml
+++ b/实验 7/ansible/samba/tasks/main.yml
@@ -12,9 +12,9 @@
 - name: add samba user
   user:
     name: "{{ SMB_USER }}"
-    shell: /sbin/nologin
+    shell: "{{ NoLogin }}"
     createhome: no
-    password: "{{ SMB_PASS_HASH }}"
+    password: "{{ SMB_PASS | password_hash('sha512') }} "
     group: "{{ SMB_GROUP }}"
 
 - name: same name Linux user
